RESOLVED FIXED269746
[macOS Debug] TestWebKitAPI.SiteIsolation.WebsitePoliciesCustomUserAgentDuringCrossSiteProvisionalNavigation is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=269746
Summary [macOS Debug] TestWebKitAPI.SiteIsolation.WebsitePoliciesCustomUserAgentDurin...
Marta Darbinyan
Reported 2024-02-19 13:55:19 PST
Description: TestWebKitAPI.SiteIsolation.WebsitePoliciesCustomUserAgentDuringCrossSiteProvisionalNavigation Is a consistent crash since it was enabled in 274779@main. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SiteIsolation.WebsitePoliciesCustomUserAgentDuringCrossSiteProvisionalNavigation&style=debug Result: ASSERTION FAILED: m_state == State::Provisional /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/Source/WebKit/UIProcess/FrameLoadState.cpp(89) : void WebKit::FrameLoadState::didFailProvisionalLoad() 1 0x107b63ca9 WTFCrash 2 0x19b94a96b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x19d8da087 WebKit::FrameLoadState::didFailProvisionalLoad() 4 0x19da478dd WebKit::WebFrameProxy::didFailProvisionalLoad() 5 0x19d8faba3 WebKit::ProvisionalPageProxy::didFailProvisionalLoadForFrame(WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, unsigned long long, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure) 6 0x19d8fa7f2 WebKit::ProvisionalPageProxy::cancel() 7 0x19db10c41 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy> >&&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::LoadedWebArchive, WebKit::WebsiteDataStore*) 8 0x19dbff8e8 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction> >&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_5::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 9 0x19dbfedb6 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction> >&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_5, void, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral>::call(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 10 0x19dcdbd1c WTF::Function<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) const 11 0x19db6b717 WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 12 0x19db0d8cd WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WTF::URL const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore> >&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&) 13 0x19db0c287 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction> >&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&) 14 0x19dc33533 WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_10::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)::'lambda'(WebCore::PolicyAction)::operator()(WebCore::PolicyAction) 15 0x19dc3307b WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_10::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 16 0x19dc326ca WTF::Detail::CallableWrapper<WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy> >&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_10, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 17 0x19da52659 WTF::Function<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) const 18 0x19da45a9e WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 19 0x19da58c83 WebKit::WebFrameProxy::setUpPolicyListenerProxy(WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>&&, WebKit::ShouldExpectSafeBrowsingResult, WebKit::ShouldExpectAppBoundDomainResult, WebKit::ShouldWaitForInitialLinkDecorationFilteringData)::$_2::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 20 0x19da58a2a WTF::Detail::CallableWrapper<WebKit::WebFrameProxy::setUpPolicyListenerProxy(WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>&&, WebKit::ShouldExpectSafeBrowsingResult, WebKit::ShouldExpectAppBoundDomainResult, WebKit::ShouldWaitForInitialLinkDecorationFilteringData)::$_2, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 21 0x19da52659 WTF::Function<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) const 22 0x19da45a9e WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 23 0x19da453e8 WebKit::WebFramePolicyListenerProxy::didReceiveSafeBrowsingResults(WTF::RefPtr<WebKit::SafeBrowsingWarning, WTF::RawPtrTraits<WebKit::SafeBrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::SafeBrowsingWarning> >&&) 24 0x19d5a9744 WebKit::WebPageProxy::beginSafeBrowsingCheck(WTF::URL const&, bool, WebKit::WebFramePolicyListenerProxy&)::$_0::operator()(SSBLookupResult*, NSError*)::'lambda'()::operator()() const 25 0x19d5a9159 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::beginSafeBrowsingCheck(WTF::URL const&, bool, WebKit::WebFramePolicyListenerProxy&)::$_0::operator()(SSBLookupResult*, NSError*)::'lambda'(), void>::call() 26 0x109bf23a2 WTF::Function<void ()>::operator()() const 27 0x107c4b82e WTF::RunLoop::performWork() 28 0x107c5164e WTF::RunLoop::performWork(void*) 29 0x7ff81eac80bb __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 30 0x7ff81eac8023 __CFRunLoopDoSource0 31 0x7ff81eac7d9d __CFRunLoopDoSources0 Link: https://build.webkit.org/#/builders/369/builds/9891/steps/19/logs/stdio
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-19 13:56:15 PST
Charlie Wolfe
Comment 2 2024-02-21 18:34:06 PST
EWS
Comment 3 2024-02-21 22:29:51 PST
Committed 275148@main (24b6aca8482a): <https://commits.webkit.org/275148@main> Reviewed commits have been landed. Closing PR #24920 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.