[macOS Debug] TestWebKitAPI.SiteIsolation.WebsitePoliciesCustomUserAgentDuringCrossSiteProvisionalNavigation is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=269746 rdar://123265363

Reviewed by Alex Christensen.

I needed to make two changes to get this test to not hit debug assertions:
 - When a subframe swaps processes it was possible for it to cancel the provisional load of the main
   frame. A provisional page load should only be canceled if another main frame provisional load was
   started.
 - `WebPageProxy::currentURL` would return the provisional or committed URL. This would cause some
   allowedFirstPartyForCookies checks to fail when subframe processes made requests while the main frame
   was in a provisional load state. `SubframeProcessPageParameters` should always use the main frame
   committed URL.

* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::injectPageIntoNewProcess):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):

Canonical link: https://commits.webkit.org/275148@main